force-app/main/default/objects/PS_Attributes_Translation__c/fields/Num1__c.field-meta.xml
<CustomField>
    <fullName>Num1__c</fullName>
    <label>Num1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>