force-app/main/default/objects/PS_Attributes_Translation__c/fields/NumOpp3__c.field-meta.xml
<CustomField>
    <fullName>NumOpp3__c</fullName>
    <label>NumOpp3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>