force-app/main/default/objects/PS_Attributes_Translation__c/fields/Text8__c.field-meta.xml
<CustomField>
    <fullName>Text8__c</fullName>
    <label>Text8</label>
    <length>255</length>
    <type>Text</type>
</CustomField>